tests/snapshots/tokenize__add_5_2.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(main) at 1:5\n( at 1:9\n) at 1:10\n{ at 1:12\nreturn at 1:14\nIntLiteral(5) at 1:21\n+ at 1:23\nIntLiteral(2) at 1:25\n; at 1:26\n} at 1:28\nEOF at 2:1\n"
stderr: ""
status: 0
