tests/snapshots/tokenize__alignof.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "void at 2:1\nIdentifier(assert) at 2:6\n( at 2:12\nint at 2:13\nIdentifier(expected) at 2:17\n, at 2:25\nint at 2:27\nIdentifier(actual) at 2:31\n, at 2:37\nchar at 2:39\n* at 2:44\nIdentifier(code) at 2:45\n) at 2:49\n; at 2:50\nint at 3:1\nIdentifier(printf) at 3:5\n( at 3:11\nchar at 3:12\n* at 3:17\nIdentifier(fmt) at 3:18\n, at 3:21\n... at 3:23\n) at 3:26\n; at 3:27\nint at 4:1\nIdentifier(sprintf) at 4:5\n( at 4:12\nchar at 4:13\n* at 4:18\nIdentifier(buf) at 4:19\n, at 4:22\nchar at 4:24\n* at 4:29\nIdentifier(fmt) at 4:30\n, at 4:33\n... at 4:35\n) at 4:38\n; at 4:39\nint at 5:1\nIdentifier(vsprintf) at 5:5\n( at 5:13\nchar at 5:14\n* at 5:19\nIdentifier(buf) at 5:20\n, at 5:23\nchar at 5:25\n* at 5:30\nIdentifier(fmt) at 5:31\n, at 5:34\nvoid at 5:36\n* at 5:41\nIdentifier(ap) at 5:42\n) at 5:44\n; at 5:45\nint at 6:1\nIdentifier(strcmp) at 6:5\n( at 6:11\nchar at 6:12\n* at 6:17\nIdentifier(p) at 6:18\n, at 6:19\nchar at 6:21\n* at 6:26\nIdentifier(q) at 6:27\n) at 6:28\n; at 6:29\nint at 7:1\nIdentifier(strncmp) at 7:5\n( at 7:12\nchar at 7:13\n* at 7:18\nIdentifier(p) at 7:19\n, at 7:20\nchar at 7:22\n* at 7:27\nIdentifier(q) at 7:28\n, at 7:29\nlong at 7:31\nIdentifier(n) at 7:36\n) at 7:37\n; at 7:38\nint at 8:1\nIdentifier(memcmp) at 8:5\n( at 8:11\nchar at 8:12\n* at 8:17\nIdentifier(p) at 8:18\n, at 8:19\nchar at 8:21\n* at 8:26\nIdentifier(q) at 8:27\n, at 8:28\nlong at 8:30\nIdentifier(n) at 8:35\n) at 8:36\n; at 8:37\nvoid at 9:1\nIdentifier(exit) at 9:6\n( at 9:10\nint at 9:11\nIdentifier(n) at 9:15\n) at 9:16\n; at 9:17\nint at 10:1\nIdentifier(vsprintf) at 10:5\n( at 10:13\n) at 10:14\n; at 10:15\nlong at 11:1\nIdentifier(strlen) at 11:6\n( at 11:12\nchar at 11:13\n* at 11:18\nIdentifier(s) at 11:19\n) at 11:20\n; at 11:21\nvoid at 12:1\n* at 12:6\nIdentifier(memcpy) at 12:7\n( at 12:13\nvoid at 12:14\n* at 12:19\nIdentifier(dest) at 12:20\n, at 12:24\nvoid at 12:26\n* at 12:31\nIdentifier(src) at 12:32\n, at 12:35\nlong at 12:37\nIdentifier(n) at 12:42\n) at 12:43\n; at 12:44\nvoid at 13:1\n* at 13:6\nIdentifier(memset) at 13:7\n( at 13:13\nvoid at 13:14\n* at 13:19\nIdentifier(s) at 13:20\n, at 13:21\nint at 13:23\nIdentifier(c) at 13:27\n, at 13:28\nlong at 13:30\nIdentifier(n) at 13:35\n) at 13:36\n; at 13:37\nint at 15:1\n_Alignas at 15:5\n( at 15:13\nIntLiteral(512, None) at 15:14\n) at 15:17\nIdentifier(g1) at 15:19\n; at 15:21\nint at 16:1\n_Alignas at 16:5\n( at 16:13\nIntLiteral(512, None) at 16:14\n) at 16:17\nIdentifier(g2) at 16:19\n; at 16:21\nchar at 17:1\nIdentifier(g3) at 17:6\n; at 17:8\nint at 18:1\nIdentifier(g4) at 18:5\n; at 18:7\nlong at 19:1\nIdentifier(g5) at 19:6\n; at 19:8\nchar at 20:1\nIdentifier(g6) at 20:6\n; at 20:8\nint at 22:1\nIdentifier(main) at 22:5\n( at 22:9\n) at 22:10\n{ at 22:12\nIdentifier(assert) at 23:3\n( at 23:9\nIntLiteral(1, None) at 23:10\n, at 23:11\n_Alignof at 23:13\n( at 23:21\nchar at 23:22\n) at 23:26\n, at 23:27\nStringLiteral(\"_Alignof(char)\") at 23:29\n) at 23:45\n; at 23:46\nIdentifier(assert) at 24:3\n( at 24:9\nIntLiteral(2, None) at 24:10\n, at 24:11\n_Alignof at 24:13\n( at 24:21\nshort at 24:22\n) at 24:27\n, at 24:28\nStringLiteral(\"_Alignof(short)\") at 24:30\n) at 24:47\n; at 24:48\nIdentifier(assert) at 25:3\n( at 25:9\nIntLiteral(4, None) at 25:10\n, at 25:11\n_Alignof at 25:13\n( at 25:21\nint at 25:22\n) at 25:25\n, at 25:26\nStringLiteral(\"_Alignof(int)\") at 25:28\n) at 25:43\n; at 25:44\nIdentifier(assert) at 26:3\n( at 26:9\nIntLiteral(8, None) at 26:10\n, at 26:11\n_Alignof at 26:13\n( at 26:21\nlong at 26:22\n) at 26:26\n, at 26:27\nStringLiteral(\"_Alignof(long)\") at 26:29\n) at 26:45\n; at 26:46\nIdentifier(assert) at 27:3\n( at 27:9\nIntLiteral(8, None) at 27:10\n, at 27:11\n_Alignof at 27:13\n( at 27:21\nlong at 27:22\nlong at 27:27\n) at 27:31\n, at 27:32\nStringLiteral(\"_Alignof(long long)\") at 27:34\n) at 27:55\n; at 27:56\nIdentifier(assert) at 28:3\n( at 28:9\nIntLiteral(1, None) at 28:10\n, at 28:11\n_Alignof at 28:13\n( at 28:21\nchar at 28:22\n[ at 28:26\nIntLiteral(3, None) at 28:27\n] at 28:28\n) at 28:29\n, at 28:30\nStringLiteral(\"_Alignof(char[3])\") at 28:32\n) at 28:51\n; at 28:52\nIdentifier(assert) at 29:3\n( at 29:9\nIntLiteral(4, None) at 29:10\n, at 29:11\n_Alignof at 29:13\n( at 29:21\nint at 29:22\n[ at 29:25\nIntLiteral(3, None) at 29:26\n] at 29:27\n) at 29:28\n, at 29:29\nStringLiteral(\"_Alignof(int[3])\") at 29:31\n) at 29:49\n; at 29:50\nIdentifier(assert) at 30:3\n( at 30:9\nIntLiteral(1, None) at 30:10\n, at 30:11\n_Alignof at 30:13\n( at 30:21\nstruct at 30:22\n{ at 30:29\nchar at 30:30\nIdentifier(a) at 30:35\n; at 30:36\nchar at 30:38\nIdentifier(b) at 30:43\n; at 30:44\n} at 30:45\n[ at 30:46\nIntLiteral(2, None) at 30:47\n] at 30:48\n) at 30:49\n, at 30:50\nStringLiteral(\"_Alignof(struct {char a; char b;}[2])\") at 30:52\n) at 30:91\n; at 30:92\nIdentifier(assert) at 31:3\n( at 31:9\nIntLiteral(8, None) at 31:10\n, at 31:11\n_Alignof at 31:13\n( at 31:21\nstruct at 31:22\n{ at 31:29\nchar at 31:30\nIdentifier(a) at 31:35\n; at 31:36\nlong at 31:38\nIdentifier(b) at 31:43\n; at 31:44\n} at 31:45\n[ at 31:46\nIntLiteral(2, None) at 31:47\n] at 31:48\n) at 31:49\n, at 31:50\nStringLiteral(\"_Alignof(struct {char a; long b;}[2])\") at 31:52\n) at 31:91\n; at 31:92\nIdentifier(assert) at 33:3\n( at 33:9\nIntLiteral(1, None) at 33:10\n, at 33:11\n( at 33:13\n{ at 33:14\n_Alignas at 33:16\n( at 33:24\nchar at 33:25\n) at 33:29\nchar at 33:31\nIdentifier(x) at 33:36\n, at 33:37\nIdentifier(y) at 33:39\n; at 33:40\n& at 33:42\nIdentifier(y) at 33:43\n- at 33:44\n& at 33:45\nIdentifier(x) at 33:46\n; at 33:47\n} at 33:49\n) at 33:50\n, at 33:51\nStringLiteral(\"({ _Alignas(char) char 1, ({ _Alignas(char) char x, y; &y-&x; }); &({ _Alignas(char) char x, y; &y-&x; })-&1; })\") at 33:53\n) at 33:167\n; at 33:168\nIdentifier(assert) at 34:3\n( at 34:9\nIntLiteral(8, None) at 34:10\n, at 34:11\n( at 34:13\n{ at 34:14\n_Alignas at 34:16\n( at 34:24\nlong at 34:25\n) at 34:29\nchar at 34:31\nIdentifier(x) at 34:36\n, at 34:37\nIdentifier(y) at 34:39\n; at 34:40\n& at 34:42\nIdentifier(y) at 34:43\n- at 34:44\n& at 34:45\nIdentifier(x) at 34:46\n; at 34:47\n} at 34:49\n) at 34:50\n, at 34:51\nStringLiteral(\"({ _Alignas(long) char 8, ({ _Alignas(long) char x, y; &y-&x; }); &({ _Alignas(long) char x, y; &y-&x; })-&8; })\") at 34:53\n) at 34:167\n; at 34:168\nIdentifier(assert) at 35:3\n( at 35:9\nIntLiteral(32, None) at 35:10\n, at 35:12\n( at 35:14\n{ at 35:15\n_Alignas at 35:17\n( at 35:25\nIntLiteral(32, None) at 35:26\n) at 35:28\nchar at 35:30\nIdentifier(x) at 35:35\n, at 35:36\nIdentifier(y) at 35:38\n; at 35:39\n& at 35:41\nIdentifier(y) at 35:42\n- at 35:43\n& at 35:44\nIdentifier(x) at 35:45\n; at 35:46\n} at 35:48\n) at 35:49\n, at 35:50\nStringLiteral(\"({ _Alignas(32) char 32, ({ _Alignas(32) char x, y; &y-&x; }); &({ _Alignas(32) char x, y; &y-&x; })-&32; })\") at 35:52\n) at 35:162\n; at 35:163\nIdentifier(assert) at 36:3\n( at 36:9\nIntLiteral(32, None) at 36:10\n, at 36:12\n( at 36:14\n{ at 36:15\n_Alignas at 36:17\n( at 36:25\nIntLiteral(32, None) at 36:26\n) at 36:28\nint at 36:30\n* at 36:34\nIdentifier(x) at 36:35\n, at 36:36\n* at 36:38\nIdentifier(y) at 36:39\n; at 36:40\n( at 36:42\n( at 36:43\nchar at 36:44\n* at 36:49\n) at 36:50\n& at 36:51\nIdentifier(y) at 36:52\n) at 36:53\n- at 36:54\n( at 36:55\n( at 36:56\nchar at 36:57\n* at 36:62\n) at 36:63\n& at 36:64\nIdentifier(x) at 36:65\n) at 36:66\n; at 36:67\n} at 36:69\n) at 36:70\n, at 36:71\nStringLiteral(\"({ _Alignas(32) int *32, *({ _Alignas(32) int *x, *y; ((char *)&y)-((char *)&x); }); ((char *)&({ _Alignas(32) int *x, *y; ((char *)&y)-((char *)&x); }))-((char *)&32); })\") at 36:73\n) at 36:246\n; at 36:247\nIdentifier(assert) at 37:3\n( at 37:9\nIntLiteral(16, None) at 37:10\n, at 37:12\n( at 37:14\n{ at 37:15\nstruct at 37:17\n{ at 37:24\n_Alignas at 37:26\n( at 37:34\nIntLiteral(16, None) at 37:35\n) at 37:37\nchar at 37:39\nIdentifier(x) at 37:44\n, at 37:45\nIdentifier(y) at 37:47\n; at 37:48\n} at 37:50\nIdentifier(a) at 37:52\n; at 37:53\n& at 37:55\nIdentifier(a) at 37:56\n. at 37:57\nIdentifier(y) at 37:58\n- at 37:59\n& at 37:60\nIdentifier(a) at 37:61\n. at 37:62\nIdentifier(x) at 37:63\n; at 37:64\n} at 37:66\n) at 37:67\n, at 37:68\nStringLiteral(\"({ struct { _Alignas(16) char 16, ({ struct { _Alignas(16) char x, y; } a; &a.y-&a.x; }); } a; &a.({ struct { _Alignas(16) char x, y; } a; &a.y-&a.x; })-&a.16; })\") at 37:70\n) at 37:234\n; at 37:235\nIdentifier(assert) at 38:3\n( at 38:9\nIntLiteral(8, None) at 38:10\n, at 38:11\n( at 38:13\n{ at 38:14\nstruct at 38:16\nIdentifier(T) at 38:23\n{ at 38:25\n_Alignas at 38:27\n( at 38:35\nIntLiteral(8, None) at 38:36\n) at 38:37\nchar at 38:39\nIdentifier(a) at 38:44\n; at 38:45\n} at 38:47\n; at 38:48\n_Alignof at 38:50\n( at 38:58\nstruct at 38:59\nIdentifier(T) at 38:66\n) at 38:67\n; at 38:68\n} at 38:70\n) at 38:71\n, at 38:72\nStringLiteral(\"({ struct T { _Alignas(8) char a; }; _Alignof(struct T); })\") at 38:74\n) at 38:135\n; at 38:136\nIdentifier(assert) at 40:3\n( at 40:9\nIntLiteral(0, None) at 40:10\n, at 40:11\n( at 40:13\nlong at 40:14\n) at 40:18\n( at 40:19\nchar at 40:20\n* at 40:25\n) at 40:26\n& at 40:27\nIdentifier(g1) at 40:28\n% at 40:31\nIntLiteral(512, None) at 40:33\n, at 40:36\nStringLiteral(\"(long)(char *)&g1 % 512\") at 40:38\n) at 40:63\n; at 40:64\nIdentifier(assert) at 41:3\n( at 41:9\nIntLiteral(0, None) at 41:10\n, at 41:11\n( at 41:13\nlong at 41:14\n) at 41:18\n( at 41:19\nchar at 41:20\n* at 41:25\n) at 41:26\n& at 41:27\nIdentifier(g2) at 41:28\n% at 41:31\nIntLiteral(512, None) at 41:33\n, at 41:36\nStringLiteral(\"(long)(char *)&g2 % 512\") at 41:38\n) at 41:63\n; at 41:64\nIdentifier(assert) at 42:3\n( at 42:9\nIntLiteral(0, None) at 42:10\n, at 42:11\n( at 42:13\nlong at 42:14\n) at 42:18\n( at 42:19\nchar at 42:20\n* at 42:25\n) at 42:26\n& at 42:27\nIdentifier(g4) at 42:28\n% at 42:31\nIntLiteral(4, None) at 42:33\n, at 42:34\nStringLiteral(\"(long)(char *)&g4 % 4\") at 42:36\n) at 42:59\n; at 42:60\nIdentifier(assert) at 43:3\n( at 43:9\nIntLiteral(0, None) at 43:10\n, at 43:11\n( at 43:13\nlong at 43:14\n) at 43:18\n( at 43:19\nchar at 43:20\n* at 43:25\n) at 43:26\n& at 43:27\nIdentifier(g5) at 43:28\n% at 43:31\nIntLiteral(8, None) at 43:33\n, at 43:34\nStringLiteral(\"(long)(char *)&g5 % 8\") at 43:36\n) at 43:59\n; at 43:60\nIdentifier(assert) at 45:3\n( at 45:9\nIntLiteral(1, None) at 45:10\n, at 45:11\n( at 45:13\n{ at 45:14\nchar at 45:16\nIdentifier(x) at 45:21\n; at 45:22\n_Alignof at 45:24\n( at 45:32\nIdentifier(x) at 45:33\n) at 45:34\n; at 45:35\n} at 45:37\n) at 45:38\n, at 45:39\nStringLiteral(\"({ char 1; _Alignof(1); })\") at 45:41\n) at 45:69\n; at 45:70\nIdentifier(assert) at 46:3\n( at 46:9\nIntLiteral(4, None) at 46:10\n, at 46:11\n( at 46:13\n{ at 46:14\nint at 46:16\nIdentifier(x) at 46:20\n; at 46:21\n_Alignof at 46:23\n( at 46:31\nIdentifier(x) at 46:32\n) at 46:33\n; at 46:34\n} at 46:36\n) at 46:37\n, at 46:38\nStringLiteral(\"({ int 4; _Alignof(4); })\") at 46:40\n) at 46:67\n; at 46:68\nIdentifier(assert) at 47:3\n( at 47:9\nIntLiteral(1, None) at 47:10\n, at 47:11\n( at 47:13\n{ at 47:14\nchar at 47:16\nIdentifier(x) at 47:21\n; at 47:22\n_Alignof at 47:24\nIdentifier(x) at 47:33\n; at 47:34\n} at 47:36\n) at 47:37\n, at 47:38\nStringLiteral(\"({ char 1; _Alignof 1; })\") at 47:40\n) at 47:67\n; at 47:68\nIdentifier(assert) at 48:3\n( at 48:9\nIntLiteral(4, None) at 48:10\n, at 48:11\n( at 48:13\n{ at 48:14\nint at 48:16\nIdentifier(x) at 48:20\n; at 48:21\n_Alignof at 48:23\nIdentifier(x) at 48:32\n; at 48:33\n} at 48:35\n) at 48:36\n, at 48:37\nStringLiteral(\"({ int 4; _Alignof 4; })\") at 48:39\n) at 48:65\n; at 48:66\nIdentifier(assert) at 50:3\n( at 50:9\nIntLiteral(1, None) at 50:10\n, at 50:11\n_Alignof at 50:13\n( at 50:21\nchar at 50:22\n) at 50:26\n<< at 50:28\nIntLiteral(31, None) at 50:31\n>> at 50:34\nIntLiteral(31, None) at 50:37\n, at 50:39\nStringLiteral(\"_Alignof(char) << 31 >> 31\") at 50:41\n) at 50:69\n; at 50:70\nIdentifier(assert) at 51:3\n( at 51:9\nIntLiteral(1, None) at 51:10\n, at 51:11\n_Alignof at 51:13\n( at 51:21\nchar at 51:22\n) at 51:26\n<< at 51:28\nIntLiteral(63, None) at 51:31\n>> at 51:34\nIntLiteral(63, None) at 51:37\n, at 51:39\nStringLiteral(\"_Alignof(char) << 63 >> 63\") at 51:41\n) at 51:69\n; at 51:70\nIdentifier(assert) at 52:3\n( at 52:9\nIntLiteral(1, None) at 52:10\n, at 52:11\n( at 52:13\n{ at 52:14\nchar at 52:16\nIdentifier(x) at 52:21\n; at 52:22\n_Alignof at 52:24\n( at 52:32\nIdentifier(x) at 52:33\n) at 52:34\n<< at 52:36\nIntLiteral(63, None) at 52:39\n>> at 52:42\nIntLiteral(63, None) at 52:45\n; at 52:47\n} at 52:49\n) at 52:50\n, at 52:51\nStringLiteral(\"({ char 1; _Alignof(1) << 63 >> 63; })\") at 52:53\n) at 52:93\n; at 52:94\nIdentifier(assert) at 54:3\n( at 54:9\nIntLiteral(0, None) at 54:10\n, at 54:11\n( at 54:13\n{ at 54:14\nchar at 54:16\nIdentifier(x) at 54:21\n[ at 54:22\nIntLiteral(16, None) at 54:23\n] at 54:25\n; at 54:26\n( at 54:28\nunsigned at 54:29\nlong at 54:38\n) at 54:42\n& at 54:43\nIdentifier(x) at 54:44\n% at 54:46\nIntLiteral(16, None) at 54:48\n; at 54:50\n} at 54:52\n) at 54:53\n, at 54:54\nStringLiteral(\"({ char 0[16]; (unsigned long)&0 % 16; })\") at 54:56\n) at 54:99\n; at 54:100\nIdentifier(assert) at 55:3\n( at 55:9\nIntLiteral(0, None) at 55:10\n, at 55:11\n( at 55:13\n{ at 55:14\nchar at 55:16\nIdentifier(x) at 55:21\n[ at 55:22\nIntLiteral(17, None) at 55:23\n] at 55:25\n; at 55:26\n( at 55:28\nunsigned at 55:29\nlong at 55:38\n) at 55:42\n& at 55:43\nIdentifier(x) at 55:44\n% at 55:46\nIntLiteral(16, None) at 55:48\n; at 55:50\n} at 55:52\n) at 55:53\n, at 55:54\nStringLiteral(\"({ char 0[17]; (unsigned long)&0 % 16; })\") at 55:56\n) at 55:99\n; at 55:100\nIdentifier(assert) at 56:3\n( at 56:9\nIntLiteral(0, None) at 56:10\n, at 56:11\n( at 56:13\n{ at 56:14\nchar at 56:16\nIdentifier(x) at 56:21\n[ at 56:22\nIntLiteral(100, None) at 56:23\n] at 56:26\n; at 56:27\n( at 56:29\nunsigned at 56:30\nlong at 56:39\n) at 56:43\n& at 56:44\nIdentifier(x) at 56:45\n% at 56:47\nIntLiteral(16, None) at 56:49\n; at 56:51\n} at 56:53\n) at 56:54\n, at 56:55\nStringLiteral(\"({ char 0[100]; (unsigned long)&0 % 16; })\") at 56:57\n) at 56:101\n; at 56:102\nIdentifier(assert) at 57:3\n( at 57:9\nIntLiteral(0, None) at 57:10\n, at 57:11\n( at 57:13\n{ at 57:14\nchar at 57:16\nIdentifier(x) at 57:21\n[ at 57:22\nIntLiteral(101, None) at 57:23\n] at 57:26\n; at 57:27\n( at 57:29\nunsigned at 57:30\nlong at 57:39\n) at 57:43\n& at 57:44\nIdentifier(x) at 57:45\n% at 57:47\nIntLiteral(16, None) at 57:49\n; at 57:51\n} at 57:53\n) at 57:54\n, at 57:55\nStringLiteral(\"({ char 0[101]; (unsigned long)&0 % 16; })\") at 57:57\n) at 57:101\n; at 57:102\nIdentifier(printf) at 59:3\n( at 59:9\nStringLiteral(\"OK\n\") at 59:10\n) at 59:16\n; at 59:17\nreturn at 60:3\nIntLiteral(0, None) at 60:10\n; at 60:11\n} at 61:1\nEOF at 62:1\n"
stderr: ""
status: 0
