tests/snapshots/tokenize__alloca.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "void at 2:1\nIdentifier(assert) at 2:6\n( at 2:12\nint at 2:13\nIdentifier(expected) at 2:17\n, at 2:25\nint at 2:27\nIdentifier(actual) at 2:31\n, at 2:37\nchar at 2:39\n* at 2:44\nIdentifier(code) at 2:45\n) at 2:49\n; at 2:50\nint at 3:1\nIdentifier(printf) at 3:5\n( at 3:11\nchar at 3:12\n* at 3:17\nIdentifier(fmt) at 3:18\n, at 3:21\n... at 3:23\n) at 3:26\n; at 3:27\nint at 4:1\nIdentifier(sprintf) at 4:5\n( at 4:12\nchar at 4:13\n* at 4:18\nIdentifier(buf) at 4:19\n, at 4:22\nchar at 4:24\n* at 4:29\nIdentifier(fmt) at 4:30\n, at 4:33\n... at 4:35\n) at 4:38\n; at 4:39\nint at 5:1\nIdentifier(vsprintf) at 5:5\n( at 5:13\nchar at 5:14\n* at 5:19\nIdentifier(buf) at 5:20\n, at 5:23\nchar at 5:25\n* at 5:30\nIdentifier(fmt) at 5:31\n, at 5:34\nvoid at 5:36\n* at 5:41\nIdentifier(ap) at 5:42\n) at 5:44\n; at 5:45\nint at 6:1\nIdentifier(strcmp) at 6:5\n( at 6:11\nchar at 6:12\n* at 6:17\nIdentifier(p) at 6:18\n, at 6:19\nchar at 6:21\n* at 6:26\nIdentifier(q) at 6:27\n) at 6:28\n; at 6:29\nint at 7:1\nIdentifier(strncmp) at 7:5\n( at 7:12\nchar at 7:13\n* at 7:18\nIdentifier(p) at 7:19\n, at 7:20\nchar at 7:22\n* at 7:27\nIdentifier(q) at 7:28\n, at 7:29\nlong at 7:31\nIdentifier(n) at 7:36\n) at 7:37\n; at 7:38\nint at 8:1\nIdentifier(memcmp) at 8:5\n( at 8:11\nchar at 8:12\n* at 8:17\nIdentifier(p) at 8:18\n, at 8:19\nchar at 8:21\n* at 8:26\nIdentifier(q) at 8:27\n, at 8:28\nlong at 8:30\nIdentifier(n) at 8:35\n) at 8:36\n; at 8:37\nvoid at 9:1\nIdentifier(exit) at 9:6\n( at 9:10\nint at 9:11\nIdentifier(n) at 9:15\n) at 9:16\n; at 9:17\nint at 10:1\nIdentifier(vsprintf) at 10:5\n( at 10:13\n) at 10:14\n; at 10:15\nlong at 11:1\nIdentifier(strlen) at 11:6\n( at 11:12\nchar at 11:13\n* at 11:18\nIdentifier(s) at 11:19\n) at 11:20\n; at 11:21\nvoid at 12:1\n* at 12:6\nIdentifier(memcpy) at 12:7\n( at 12:13\nvoid at 12:14\n* at 12:19\nIdentifier(dest) at 12:20\n, at 12:24\nvoid at 12:26\n* at 12:31\nIdentifier(src) at 12:32\n, at 12:35\nlong at 12:37\nIdentifier(n) at 12:42\n) at 12:43\n; at 12:44\nvoid at 13:1\n* at 13:6\nIdentifier(memset) at 13:7\n( at 13:13\nvoid at 13:14\n* at 13:19\nIdentifier(s) at 13:20\n, at 13:21\nint at 13:23\nIdentifier(c) at 13:27\n, at 13:28\nlong at 13:30\nIdentifier(n) at 13:35\n) at 13:36\n; at 13:37\nvoid at 15:1\n* at 15:6\nIdentifier(fn) at 15:7\n( at 15:9\nint at 15:10\nIdentifier(x) at 15:14\n, at 15:15\nvoid at 15:17\n* at 15:22\nIdentifier(p) at 15:23\n, at 15:24\nint at 15:26\nIdentifier(y) at 15:30\n) at 15:31\n{ at 15:33\nreturn at 15:35\nIdentifier(p) at 15:42\n; at 15:43\n} at 15:45\nint at 17:1\nIdentifier(main) at 17:5\n( at 17:9\n) at 17:10\n{ at 17:12\nint at 18:3\nIdentifier(i) at 18:7\n= at 18:9\nIntLiteral(0, None) at 18:11\n; at 18:12\nchar at 20:3\n* at 20:8\nIdentifier(p1) at 20:9\n= at 20:12\nIdentifier(alloca) at 20:14\n( at 20:20\nIntLiteral(16, None) at 20:21\n) at 20:23\n; at 20:24\nchar at 21:3\n* at 21:8\nIdentifier(p2) at 21:9\n= at 21:12\nIdentifier(alloca) at 21:14\n( at 21:20\nIntLiteral(16, None) at 21:21\n) at 21:23\n; at 21:24\nchar at 22:3\n* at 22:8\nIdentifier(p3) at 22:9\n= at 22:12\nIntLiteral(1, None) at 22:14\n+ at 22:16\n( at 22:18\nchar at 22:19\n* at 22:24\n) at 22:25\nIdentifier(alloca) at 22:26\n( at 22:32\nIntLiteral(3, None) at 22:33\n) at 22:34\n+ at 22:36\nIntLiteral(1, None) at 22:38\n; at 22:39\nIdentifier(p3) at 23:3\n-= at 23:6\nIntLiteral(2, None) at 23:9\n; at 23:10\nchar at 24:3\n* at 24:8\nIdentifier(p4) at 24:9\n= at 24:12\nIdentifier(fn) at 24:14\n( at 24:16\nIntLiteral(1, None) at 24:17\n, at 24:18\nIdentifier(alloca) at 24:20\n( at 24:26\nIntLiteral(16, None) at 24:27\n) at 24:29\n, at 24:30\nIntLiteral(3, None) at 24:32\n) at 24:33\n; at 24:34\nIdentifier(assert) at 26:3\n( at 26:9\nIntLiteral(16, None) at 26:10\n, at 26:12\nIdentifier(p1) at 26:14\n- at 26:17\nIdentifier(p2) at 26:19\n, at 26:21\nStringLiteral(\"p1 - p2\") at 26:23\n) at 26:32\n; at 26:33\nIdentifier(assert) at 27:3\n( at 27:9\nIntLiteral(16, None) at 27:10\n, at 27:12\nIdentifier(p2) at 27:14\n- at 27:17\nIdentifier(p3) at 27:19\n, at 27:21\nStringLiteral(\"p2 - p3\") at 27:23\n) at 27:32\n; at 27:33\nIdentifier(assert) at 28:3\n( at 28:9\nIntLiteral(16, None) at 28:10\n, at 28:12\nIdentifier(p3) at 28:14\n- at 28:17\nIdentifier(p4) at 28:19\n, at 28:21\nStringLiteral(\"p3 - p4\") at 28:23\n) at 28:32\n; at 28:33\nIdentifier(memcpy) at 30:3\n( at 30:9\nIdentifier(p1) at 30:10\n, at 30:12\nStringLiteral(\"0123456789abcdef\") at 30:14\n, at 30:32\nIntLiteral(16, None) at 30:34\n) at 30:36\n; at 30:37\nIdentifier(memcpy) at 31:3\n( at 31:9\nIdentifier(p2) at 31:10\n, at 31:12\nStringLiteral(\"ghijklmnopqrstuv\") at 31:14\n, at 31:32\nIntLiteral(16, None) at 31:34\n) at 31:36\n; at 31:37\nIdentifier(memcpy) at 32:3\n( at 32:9\nIdentifier(p3) at 32:10\n, at 32:12\nStringLiteral(\"wxy\") at 32:14\n, at 32:19\nIntLiteral(3, None) at 32:21\n) at 32:22\n; at 32:23\nIdentifier(assert) at 34:3\n( at 34:9\nIntLiteral(0, None) at 34:10\n, at 34:11\nIdentifier(memcmp) at 34:13\n( at 34:19\nIdentifier(p1) at 34:20\n, at 34:22\nStringLiteral(\"0123456789abcdef\") at 34:24\n, at 34:42\nIntLiteral(16, None) at 34:44\n) at 34:46\n, at 34:47\nStringLiteral(\"memcmp(p1, \") at 34:49\nIntLiteral(123456789, None) at 34:62\nIdentifier(abcdef) at 34:72\nStringLiteral(\", 16)\") at 34:78\n) at 34:85\n; at 34:86\nIdentifier(assert) at 35:3\n( at 35:9\nIntLiteral(0, None) at 35:10\n, at 35:11\nIdentifier(memcmp) at 35:13\n( at 35:19\nIdentifier(p2) at 35:20\n, at 35:22\nStringLiteral(\"ghijklmnopqrstuv\") at 35:24\n, at 35:42\nIntLiteral(16, None) at 35:44\n) at 35:46\n, at 35:47\nStringLiteral(\"memcmp(p2, \") at 35:49\nIdentifier(ghijklmnopqrstuv) at 35:62\nStringLiteral(\", 16)\") at 35:78\n) at 35:85\n; at 35:86\nIdentifier(assert) at 36:3\n( at 36:9\nIntLiteral(0, None) at 36:10\n, at 36:11\nIdentifier(memcmp) at 36:13\n( at 36:19\nIdentifier(p3) at 36:20\n, at 36:22\nStringLiteral(\"wxy\") at 36:24\n, at 36:29\nIntLiteral(3, None) at 36:31\n) at 36:32\n, at 36:33\nStringLiteral(\"memcmp(p3, \") at 36:35\nIdentifier(wxy) at 36:48\nStringLiteral(\", 3)\") at 36:51\n) at 36:57\n; at 36:58\nIdentifier(printf) at 38:3\n( at 38:9\nStringLiteral(\"OK\n\") at 38:10\n) at 38:16\n; at 38:17\nreturn at 39:3\nIntLiteral(0, None) at 39:10\n; at 39:11\n} at 40:1\nEOF at 41:1\n"
stderr: ""
status: 0
