tests/snapshots/tokenize__arithmetic.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int\nIdentifier(main)\n(\n)\n{\nreturn\nIntLiteral(2)\n+\nIntLiteral(3)\n*\nIntLiteral(4)\n;\n}\nEOF\n"
stderr: ""
status: 0
