tests/snapshots/tokenize__array_2d.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(main) at 1:5\n( at 1:9\n) at 1:10\n{ at 1:12\nint at 2:5\nIdentifier(matrix) at 2:9\n[ at 2:15\nIntLiteral(2) at 2:16\n] at 2:17\n[ at 2:18\nIntLiteral(3) at 2:19\n] at 2:20\n= at 2:22\n{ at 2:24\n{ at 2:25\nIntLiteral(1) at 2:26\n, at 2:27\nIntLiteral(2) at 2:29\n, at 2:30\nIntLiteral(3) at 2:32\n} at 2:33\n, at 2:34\n{ at 2:36\nIntLiteral(4) at 2:37\n, at 2:38\nIntLiteral(5) at 2:40\n, at 2:41\nIntLiteral(6) at 2:43\n} at 2:44\n} at 2:45\n; at 2:46\nreturn at 3:5\nIdentifier(matrix) at 3:12\n[ at 3:18\nIntLiteral(0) at 3:19\n] at 3:20\n[ at 3:21\nIntLiteral(0) at 3:22\n] at 3:23\n+ at 3:25\nIdentifier(matrix) at 3:27\n[ at 3:33\nIntLiteral(0) at 3:34\n] at 3:35\n[ at 3:36\nIntLiteral(1) at 3:37\n] at 3:38\n+ at 3:40\nIdentifier(matrix) at 3:42\n[ at 3:48\nIntLiteral(0) at 3:49\n] at 3:50\n[ at 3:51\nIntLiteral(2) at 3:52\n] at 3:53\n+ at 3:55\nIdentifier(matrix) at 4:12\n[ at 4:18\nIntLiteral(1) at 4:19\n] at 4:20\n[ at 4:21\nIntLiteral(0) at 4:22\n] at 4:23\n+ at 4:25\nIdentifier(matrix) at 4:27\n[ at 4:33\nIntLiteral(1) at 4:34\n] at 4:35\n[ at 4:36\nIntLiteral(1) at 4:37\n] at 4:38\n+ at 4:40\nIdentifier(matrix) at 4:42\n[ at 4:48\nIntLiteral(1) at 4:49\n] at 4:50\n[ at 4:51\nIntLiteral(2) at 4:52\n] at 4:53\n; at 4:54\n} at 5:1\nEOF at 6:1\n"
stderr: ""
status: 0
