tests/snapshots/tokenize__array_2d_partial.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(main) at 1:5\n( at 1:9\n) at 1:10\n{ at 1:12\nint at 2:5\nIdentifier(matrix) at 2:9\n[ at 2:15\nIntLiteral(3, None) at 2:16\n] at 2:17\n[ at 2:18\nIntLiteral(3, None) at 2:19\n] at 2:20\n= at 2:22\n{ at 2:24\n{ at 2:25\nIntLiteral(1, None) at 2:26\n, at 2:27\nIntLiteral(2, None) at 2:29\n} at 2:30\n, at 2:31\n{ at 2:33\nIntLiteral(3, None) at 2:34\n} at 2:35\n} at 2:36\n; at 2:37\nreturn at 3:5\nIdentifier(matrix) at 3:12\n[ at 3:18\nIntLiteral(0, None) at 3:19\n] at 3:20\n[ at 3:21\nIntLiteral(0, None) at 3:22\n] at 3:23\n+ at 3:25\nIdentifier(matrix) at 3:27\n[ at 3:33\nIntLiteral(0, None) at 3:34\n] at 3:35\n[ at 3:36\nIntLiteral(1, None) at 3:37\n] at 3:38\n+ at 3:40\nIdentifier(matrix) at 3:42\n[ at 3:48\nIntLiteral(0, None) at 3:49\n] at 3:50\n[ at 3:51\nIntLiteral(2, None) at 3:52\n] at 3:53\n+ at 3:55\nIdentifier(matrix) at 4:12\n[ at 4:18\nIntLiteral(1, None) at 4:19\n] at 4:20\n[ at 4:21\nIntLiteral(0, None) at 4:22\n] at 4:23\n+ at 4:25\nIdentifier(matrix) at 4:27\n[ at 4:33\nIntLiteral(1, None) at 4:34\n] at 4:35\n[ at 4:36\nIntLiteral(1, None) at 4:37\n] at 4:38\n+ at 4:40\nIdentifier(matrix) at 4:42\n[ at 4:48\nIntLiteral(1, None) at 4:49\n] at 4:50\n[ at 4:51\nIntLiteral(2, None) at 4:52\n] at 4:53\n+ at 4:55\nIdentifier(matrix) at 5:12\n[ at 5:18\nIntLiteral(2, None) at 5:19\n] at 5:20\n[ at 5:21\nIntLiteral(0, None) at 5:22\n] at 5:23\n+ at 5:25\nIdentifier(matrix) at 5:27\n[ at 5:33\nIntLiteral(2, None) at 5:34\n] at 5:35\n[ at 5:36\nIntLiteral(1, None) at 5:37\n] at 5:38\n+ at 5:40\nIdentifier(matrix) at 5:42\n[ at 5:48\nIntLiteral(2, None) at 5:49\n] at 5:50\n[ at 5:51\nIntLiteral(2, None) at 5:52\n] at 5:53\n; at 5:54\n} at 6:1\nEOF at 7:1\n"
stderr: ""
status: 0
