tests/snapshots/tokenize__array_large.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(main) at 1:5\n( at 1:9\n) at 1:10\n{ at 1:12\nint at 2:5\nIdentifier(arr) at 2:9\n[ at 2:12\nIntLiteral(100, None) at 2:13\n] at 2:16\n= at 2:18\n{ at 2:20\nIntLiteral(1, None) at 2:21\n, at 2:22\nIntLiteral(2, None) at 2:24\n, at 2:25\nIntLiteral(3, None) at 2:27\n, at 2:28\nIntLiteral(4, None) at 2:30\n, at 2:31\nIntLiteral(5, None) at 2:33\n} at 2:34\n; at 2:35\nint at 3:5\nIdentifier(sum) at 3:9\n= at 3:13\nIntLiteral(0, None) at 3:15\n; at 3:16\nfor at 4:5\n( at 4:9\nint at 4:10\nIdentifier(i) at 4:14\n= at 4:16\nIntLiteral(0, None) at 4:18\n; at 4:19\nIdentifier(i) at 4:21\n< at 4:23\nIntLiteral(100, None) at 4:25\n; at 4:28\nIdentifier(i) at 4:30\n++ at 4:31\n) at 4:33\n{ at 4:35\nIdentifier(sum) at 5:9\n= at 5:13\nIdentifier(sum) at 5:15\n+ at 5:19\nIdentifier(arr) at 5:21\n[ at 5:24\nIdentifier(i) at 5:25\n] at 5:26\n; at 5:27\n} at 6:5\nreturn at 7:5\nIdentifier(sum) at 7:12\n; at 7:15\n} at 8:1\nEOF at 9:1\n"
stderr: ""
status: 0
