tests/snapshots/tokenize__asm.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "void at 2:1\nIdentifier(assert) at 2:6\n( at 2:12\nint at 2:13\nIdentifier(expected) at 2:17\n, at 2:25\nint at 2:27\nIdentifier(actual) at 2:31\n, at 2:37\nchar at 2:39\n* at 2:44\nIdentifier(code) at 2:45\n) at 2:49\n; at 2:50\nint at 3:1\nIdentifier(printf) at 3:5\n( at 3:11\nchar at 3:12\n* at 3:17\nIdentifier(fmt) at 3:18\n, at 3:21\n... at 3:23\n) at 3:26\n; at 3:27\nint at 4:1\nIdentifier(sprintf) at 4:5\n( at 4:12\nchar at 4:13\n* at 4:18\nIdentifier(buf) at 4:19\n, at 4:22\nchar at 4:24\n* at 4:29\nIdentifier(fmt) at 4:30\n, at 4:33\n... at 4:35\n) at 4:38\n; at 4:39\nint at 5:1\nIdentifier(vsprintf) at 5:5\n( at 5:13\nchar at 5:14\n* at 5:19\nIdentifier(buf) at 5:20\n, at 5:23\nchar at 5:25\n* at 5:30\nIdentifier(fmt) at 5:31\n, at 5:34\nvoid at 5:36\n* at 5:41\nIdentifier(ap) at 5:42\n) at 5:44\n; at 5:45\nint at 6:1\nIdentifier(strcmp) at 6:5\n( at 6:11\nchar at 6:12\n* at 6:17\nIdentifier(p) at 6:18\n, at 6:19\nchar at 6:21\n* at 6:26\nIdentifier(q) at 6:27\n) at 6:28\n; at 6:29\nint at 7:1\nIdentifier(strncmp) at 7:5\n( at 7:12\nchar at 7:13\n* at 7:18\nIdentifier(p) at 7:19\n, at 7:20\nchar at 7:22\n* at 7:27\nIdentifier(q) at 7:28\n, at 7:29\nlong at 7:31\nIdentifier(n) at 7:36\n) at 7:37\n; at 7:38\nint at 8:1\nIdentifier(memcmp) at 8:5\n( at 8:11\nchar at 8:12\n* at 8:17\nIdentifier(p) at 8:18\n, at 8:19\nchar at 8:21\n* at 8:26\nIdentifier(q) at 8:27\n, at 8:28\nlong at 8:30\nIdentifier(n) at 8:35\n) at 8:36\n; at 8:37\nvoid at 9:1\nIdentifier(exit) at 9:6\n( at 9:10\nint at 9:11\nIdentifier(n) at 9:15\n) at 9:16\n; at 9:17\nint at 10:1\nIdentifier(vsprintf) at 10:5\n( at 10:13\n) at 10:14\n; at 10:15\nlong at 11:1\nIdentifier(strlen) at 11:6\n( at 11:12\nchar at 11:13\n* at 11:18\nIdentifier(s) at 11:19\n) at 11:20\n; at 11:21\nvoid at 12:1\n* at 12:6\nIdentifier(memcpy) at 12:7\n( at 12:13\nvoid at 12:14\n* at 12:19\nIdentifier(dest) at 12:20\n, at 12:24\nvoid at 12:26\n* at 12:31\nIdentifier(src) at 12:32\n, at 12:35\nlong at 12:37\nIdentifier(n) at 12:42\n) at 12:43\n; at 12:44\nvoid at 13:1\n* at 13:6\nIdentifier(memset) at 13:7\n( at 13:13\nvoid at 13:14\n* at 13:19\nIdentifier(s) at 13:20\n, at 13:21\nint at 13:23\nIdentifier(c) at 13:27\n, at 13:28\nlong at 13:30\nIdentifier(n) at 13:35\n) at 13:36\n; at 13:37\nchar at 15:1\n* at 15:6\nIdentifier(asm_fn1) at 15:7\n( at 15:14\nvoid at 15:15\n) at 15:19\n{ at 15:21\nasm at 16:3\n( at 16:6\nStringLiteral(\"mov $50, %rax\n\t\") at 16:7\nStringLiteral(\"mov %rbp, %rsp\n\t\") at 17:7\nStringLiteral(\"pop %rbp\n\t\") at 18:7\nStringLiteral(\"ret\") at 19:7\n) at 19:12\n; at 19:13\n} at 20:1\nchar at 22:1\n* at 22:6\nIdentifier(asm_fn2) at 22:7\n( at 22:14\nvoid at 22:15\n) at 22:19\n{ at 22:21\nasm at 23:3\nIdentifier(inline) at 23:7\nvolatile at 23:14\n( at 23:22\nStringLiteral(\"mov $55, %rax\n\t\") at 23:23\nStringLiteral(\"mov %rbp, %rsp\n\t\") at 24:23\nStringLiteral(\"pop %rbp\n\t\") at 25:23\nStringLiteral(\"ret\") at 26:23\n) at 26:28\n; at 26:29\n} at 27:1\nint at 29:1\nIdentifier(main) at 29:5\n( at 29:9\n) at 29:10\n{ at 29:12\nIdentifier(assert) at 30:3\n( at 30:9\nIntLiteral(50, None) at 30:10\n, at 30:12\nIdentifier(asm_fn1) at 30:14\n( at 30:21\n) at 30:22\n, at 30:23\nStringLiteral(\"asm_fn1()\") at 30:25\n) at 30:36\n; at 30:37\nIdentifier(assert) at 31:3\n( at 31:9\nIntLiteral(55, None) at 31:10\n, at 31:12\nIdentifier(asm_fn2) at 31:14\n( at 31:21\n) at 31:22\n, at 31:23\nStringLiteral(\"asm_fn2()\") at 31:25\n) at 31:36\n; at 31:37\nIdentifier(printf) at 33:3\n( at 33:9\nStringLiteral(\"OK\n\") at 33:10\n) at 33:16\n; at 33:17\nreturn at 34:3\nIntLiteral(0, None) at 34:10\n; at 34:11\n} at 35:1\nEOF at 36:1\n"
stderr: ""
status: 0
