tests/snapshots/tokenize__asm_gcc_syntax.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 2:1\nIdentifier(main) at 2:5\n( at 2:9\n) at 2:10\n{ at 2:12\nasm at 3:5\n( at 3:12\nStringLiteral(\"movq $5, %rax\") at 3:13\n) at 3:28\n; at 3:29\nreturn at 4:5\nIntLiteral(0) at 4:12\n; at 4:13\n} at 5:1\nEOF at 6:1\n"
stderr: ""
status: 0
