tests/snapshots/tokenize__asm_return.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 2:1\nIdentifier(main) at 2:5\n( at 2:9\n) at 2:10\n{ at 2:12\nasm at 3:5\n( at 3:8\nStringLiteral(\"movq $7, %rax\") at 3:9\n) at 3:24\n; at 3:25\nreturn at 4:5\nIntLiteral(0, None) at 4:12\n; at 4:13\n} at 5:1\nEOF at 6:1\n"
stderr: ""
status: 0
